--- a/src/data_generation/v_other/bond_percolation.ipynb
+++ b/src/data_generation/v_other/bond_percolation.ipynb
@@ -2293,7 +2293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2353,33 +2353,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "250×250 Matrix{Float64}:\n",
-       "  1.0   1.0   1.0   1.0   1.0   1.0  …   4.0   4.0   4.0   4.0   4.0   4.0\n",
-       "  1.0   1.0   1.0   1.0   1.0   1.0      1.0   1.0   1.0   1.0   1.0   1.0\n",
-       "  1.0   1.0   1.0   1.0   1.0   1.0      1.0   1.0   1.0   1.0   1.0   1.0\n",
-       "  1.0   1.0   1.0   1.0   1.0   1.0      1.0   1.0   1.0   1.0   1.0   1.0\n",
-       "  1.0   1.0   1.0   1.0   1.0   1.0      1.0   1.0   1.0   1.0   1.0   1.0\n",
-       "  1.0   1.0   1.0   1.0   1.0   1.0  …   1.0   1.0   1.0   1.0   1.0   1.0\n",
-       "  1.0   1.0   1.0   1.0   1.0   1.0      1.0   1.0   1.0   1.0   1.0   1.0\n",
-       "  1.0   1.0   0.0   1.0   1.0   1.0      0.0   1.0   1.0   1.0   1.0   1.0\n",
-       "  1.0   1.0   1.0   1.0   1.0   1.0      1.0   1.0   1.0   1.0   1.0   1.0\n",
-       "  1.0   1.0   1.0   1.0   1.0   1.0      1.0   1.0   1.0   1.0   1.0   1.0\n",
-       "  ⋮                             ⋮    ⋱         ⋮                      \n",
-       " 46.0  46.0  46.0  46.0  46.0  46.0     47.0  47.0  47.0  47.0  47.0  47.0\n",
-       " 47.0  47.0  47.0  47.0  47.0  47.0     47.0  47.0  47.0  47.0  47.0  47.0\n",
-       " 47.0  47.0  47.0  47.0  47.0  47.0      0.0  48.0  48.0  48.0  48.0  48.0\n",
-       " 48.0  48.0  48.0  48.0  48.0  48.0     48.0  48.0  48.0  48.0  48.0  48.0\n",
-       " 48.0  48.0  48.0  48.0  48.0  48.0  …  48.0  48.0  48.0  48.0  48.0  48.0\n",
-       " 48.0  48.0  48.0  48.0  48.0  48.0     48.0  48.0  48.0  48.0  48.0  48.0\n",
-       " 48.0  48.0  48.0  48.0  48.0  48.0     48.0  48.0  48.0  48.0  48.0  48.0\n",
-       " 48.0  48.0  48.0  48.0  48.0  48.0     48.0  48.0  48.0  48.0  48.0  48.0\n",
-       " 48.0  48.0  48.0  48.0  48.0  48.0     48.0  48.0  48.0  48.0  48.0  48.0"
+       "250×250 reinterpret(reshape, N0f8, ::Array{Gray{N0f8},2}) with eltype N0f8:\n",
+       " 1.0  1.0  1.0  1.0  1.0  1.0  1.0  1.0  …  1.0  1.0  1.0  1.0  1.0  1.0  1.0\n",
+       " 1.0  1.0  1.0  1.0  1.0  1.0  1.0  1.0     1.0  1.0  1.0  1.0  1.0  1.0  1.0\n",
+       " 1.0  1.0  1.0  1.0  1.0  1.0  1.0  1.0     1.0  1.0  1.0  1.0  1.0  1.0  1.0\n",
+       " 1.0  1.0  1.0  1.0  1.0  1.0  1.0  1.0     1.0  1.0  1.0  1.0  1.0  1.0  1.0\n",
+       " 1.0  1.0  1.0  1.0  1.0  1.0  1.0  1.0     1.0  1.0  1.0  1.0  1.0  1.0  1.0\n",
+       " 1.0  1.0  1.0  1.0  1.0  1.0  1.0  1.0  …  1.0  1.0  1.0  1.0  1.0  1.0  1.0\n",
+       " 1.0  1.0  1.0  1.0  1.0  1.0  1.0  1.0     1.0  1.0  1.0  1.0  1.0  1.0  1.0\n",
+       " 1.0  1.0  0.0  1.0  1.0  1.0  1.0  1.0     1.0  0.0  1.0  1.0  1.0  1.0  1.0\n",
+       " 1.0  1.0  1.0  1.0  1.0  1.0  1.0  1.0     1.0  1.0  1.0  1.0  1.0  1.0  1.0\n",
+       " 1.0  1.0  1.0  1.0  1.0  1.0  1.0  1.0     1.0  1.0  1.0  1.0  1.0  1.0  1.0\n",
+       " ⋮                        ⋮              ⋱            ⋮                   \n",
+       " 1.0  1.0  1.0  1.0  1.0  1.0  1.0  1.0     1.0  1.0  1.0  1.0  1.0  1.0  1.0\n",
+       " 1.0  1.0  1.0  1.0  1.0  1.0  1.0  1.0     1.0  1.0  1.0  1.0  1.0  1.0  1.0\n",
+       " 1.0  1.0  1.0  1.0  1.0  1.0  1.0  1.0     1.0  0.0  1.0  1.0  1.0  1.0  1.0\n",
+       " 1.0  1.0  1.0  1.0  1.0  1.0  1.0  1.0     1.0  1.0  1.0  1.0  1.0  1.0  1.0\n",
+       " 1.0  1.0  1.0  1.0  1.0  1.0  1.0  1.0  …  1.0  1.0  1.0  1.0  1.0  1.0  1.0\n",
+       " 1.0  1.0  1.0  1.0  1.0  1.0  1.0  1.0     1.0  1.0  1.0  1.0  1.0  1.0  1.0\n",
+       " 1.0  1.0  1.0  1.0  1.0  1.0  1.0  1.0     1.0  1.0  1.0  1.0  1.0  1.0  1.0\n",
+       " 1.0  1.0  1.0  1.0  1.0  1.0  1.0  1.0     1.0  1.0  1.0  1.0  1.0  1.0  1.0\n",
+       " 1.0  1.0  1.0  1.0  1.0  1.0  1.0  1.0     1.0  1.0  1.0  1.0  1.0  1.0  1.0"
       ]
      },
      "metadata": {},
@@ -2387,7 +2387,14 @@
     }
    ],
    "source": [
-    "label"
+    "imgarr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "rando"
    ]
   }
  ],
