--- a/src/data_generation/archive/v_other/bond_percolation.ipynb
+++ b/src/data_generation/archive/v_other/bond_percolation.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# this is a testing script but not used\n",
     "mutable struct Cluster\n",
     "    size::Int\n",
     "    parent::Union{Cluster, Nothing}\n",
