--- a/src/scratch.ipynb
+++ b/src/scratch.ipynb
@@ -236,6 +236,7 @@
     }
    ],
    "source": [
+    "# none of this is used in the final script\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
